@@ -1,7 +1,7 @@
 // { dg-options "-std=gnu++0x" }
 // { dg-do compile }
 
-// Copyright (C) 2005, 2006, 2007 Free Software Foundation
+// Copyright (C) 2005, 2006, 2007, 2008 Free Software Foundation
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
 // software; you can redistribute it and/or modify it under the
@@ -21,7 +21,7 @@
 
 // 20.6.6.2 Template class shared_ptr [util.smartptr.shared]
 
-#include <memory>
+#include <memory>  // { dg-excess-errors "In file included from" }
 #include <testsuite_hooks.h>
 
 struct A { };
